<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.8.RELEASE</version>
	</parent>
	<groupId>at.srfg.iasset</groupId>
	<artifactId>asset-repository</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<java.version>11</java.version>
		<revision>${project.version}</revision>
		<jersey.version>2.32</jersey.version>
	</properties>
	<modules>
		<module>asset-connector</module>
		<module>asset-repository-api</module>
		<module>asset-repository-mongo</module>
		<module>asset-repository-service</module>
	</modules>
</project>